# local_cli_mfem

./: CMakeLists.txt  README.md  config.sh  dd_antenna.cc  dd_antenna_sizefield.cc  mfem_ex3p.cc  pumi_ex3p.cc  pumi_ex3p_sizefield.cc  read_pumi_mesh.cc  testNedelecFieldTransfer.cc  testNedelecTangentialContinuity.cc  test_std_set.cc
meshes/: fichera.x_t
